[382][Brindha|Ruchika]Fix. no data found alignment issue in admin page

--- a/src/app/components/admin/admin-question/admin-question.component.css
+++ b/src/app/components/admin/admin-question/admin-question.component.css
@@ -196,7 +196,8 @@
   border-radius: 6px 48px 0 0;
   border-bottom: none;
   opacity: 1;
-  width: 25%;
+  width: 28%;
+  padding-top: 0.2%;
   border-width:1px;
   height: 4.5vh;
 
